--- a/source/_layouts/bio.twig
+++ b/source/_layouts/bio.twig
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="bio-headshot-wrapper">
-    <div class="bio-headshot"><img src="{{ site.url }}/assets/team/{{ page.symname }}.png"></div>
+    <div class="bio-headshot"><img width="400" height="400" src="{{ site.url }}/assets/team/{{ page.symname }}.png"></div>
 </div>
 
 <h1>{{ page.name }}</h1>
